--- a/app/scss/_typography.scss
+++ b/app/scss/_typography.scss
@@ -70,16 +70,11 @@
   border-top: solid 1px $light-gray;
 }
 
-
-.m-minus {
+.row-form {
   margin-right: -10px;
   margin-left: -10px;
 }
 
 .bold {
   font-family: $bold;
-}
-
-.h2 {
-  font-size: 24px;
 }
