--- a/app/scss/_inputs.scss
+++ b/app/scss/_inputs.scss
@@ -6,6 +6,7 @@
     border-radius: 4px;
     box-shadow: inset 0 0 0 1px #909196;
     display: flex;
+    @extend .animate;
     &:hover {
       box-shadow: inset 0 0 0 1px #000;
     }
