--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -1,4 +1,3 @@
-/*-- FOOTER --*/
 .main-footer {
   background-color: $accent;
   padding-bottom: 24px;
@@ -8,11 +7,8 @@
     li {
       a {
         color: white;
+        padding: 5px 10px;
       }
     }
   }
-}
-
-.bg-dark-blue {
-
 }
