--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -55,9 +55,7 @@ body {
 	flex: 1 0 auto;
 	padding-top: 90px;
 }
-.footer {
-	//flex: 0 0 auto;
-}
+
 img, svg {
 	max-height: 100%;
 	max-width: 100%;
@@ -130,6 +128,10 @@ h1, h2, h3, h4 {
   width: 50%;
 }
 
+.w-50-fix {
+  width: 50%;
+}
+
 .w-40 {
   width: 40%;
 }
@@ -161,6 +163,7 @@ h1, h2, h3, h4 {
 .main-section {
   width: 70%;
   margin-right: 24px;
+  background-color: white;
 }
 
 .row-form {
@@ -171,6 +174,10 @@ h1, h2, h3, h4 {
 .aside {
   width: 30%;
   flex-shrink: 0;
+  background-color: white;
+  .inner-wrapper .price-item {
+    //@extend .animate;
+  }
 }
 
 .error {
@@ -247,15 +254,17 @@ h1, h2, h3, h4 {
 
 @media only screen and (max-width: 992px) {
   .main-content {
-    flex-wrap: wrap;
-    width: 600px;
+    flex-direction: column;
+    //flex-wrap: wrap;
+    width: 700px;
     max-width: 100%;
     .main-section {
+      width: 100%;
       //width: 600px;
       //max-width: 100%;
     }
     .aside {
-      width: 600px;
+      width: 100%;
       max-width: 100%;
     }
   }
@@ -265,6 +274,78 @@ h1, h2, h3, h4 {
       width: 100%;
     }
 
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .main {
+    padding-top: 0;
+  }
+  .main-content {
+    padding: 0;
+    .checkout-block {
+      border-radius: 0;
+      margin-bottom: 0;
+    }
+    .inner-wrapper {
+      padding: 16px;
+
+    }
+    .products-row {
+      .product-list {
+        .price-qty {
+          flex-direction: column;
+          text-align: right;
+          div {
+            padding: 0;
+          }
+        }
+        .f5 {
+          font-size: 12px;
+        }
+
+      }
+    }
+
+    .aside {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      z-index: 2;
+      .checkout-block {
+        margin-bottom: 0;
+        box-shadow: none;
+        .inner-wrapper {
+          display: flex;
+          flex-direction: column-reverse;
+          padding-top: 0;
+          padding-bottom: 0;
+          .price-item {
+            //height: 0;
+            //visibility: hidden;
+            //opacity: 0;
+            display: none;
+          }
+          .total-price {
+            padding-bottom: 16px;
+            justify-content: flex-end;
+            p:last-child {
+              padding-left: 10px;
+            }
+          }
+        }
+      }
+
+
+    }
+    .aside.show {
+      .checkout-block .inner-wrapper .price-item {
+        display: flex;
+        //height: auto;
+        //visibility: visible;
+        //opacity: 1;
+      }
+    }
   }
 }
 
