--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -339,8 +339,10 @@ h1, h2, h3, h4 {
 
     }
     .aside.show {
+      //position: static;
       .checkout-block .inner-wrapper .price-item {
         display: flex;
+
         //height: auto;
         //visibility: visible;
         //opacity: 1;
