--- a/app/scss/_inputs.scss
+++ b/app/scss/_inputs.scss
@@ -7,7 +7,7 @@
     box-shadow: inset 0 0 0 1px #909196;
     display: flex;
     @extend .animate;
-    &:hover {
+    &:hover, &:focus, &:active {
       box-shadow: inset 0 0 0 1px #000;
     }
     input, select, textarea {
@@ -29,13 +29,14 @@
     }
   }
   .error {
-    color: $red;
     position: relative;
+    padding:  4px 16px;
+    font-size: 12px;
+    color: $red;
     &:after{
       content: "\f06a";
       font-family: "Font Awesome 5 Pro";
       margin-left: 5px;
-
     }
   }
 }
