--- a/app/scss/_inputs.scss
+++ b/app/scss/_inputs.scss
@@ -30,7 +30,7 @@
   }
   .error {
     position: relative;
-    padding:  4px 16px;
+    padding:  4px 16px 4px 0;
     font-size: 12px;
     color: $red;
     &:after{
