--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -52,8 +52,9 @@ body {
 }
 
 .main {
-	flex: 1 0 auto;
-	padding-top: 90px;
+  flex: 1 0 auto;
+  padding-top: 90px;
+  position: relative;
 }
 
 img, svg {
@@ -94,20 +95,13 @@ h1, h2, h3, h4 {
 .animate {
 	transition: all 0.3s ease;
 }
-.no_scroll {
-	//overflow: hidden;
-	//&:after {
-	//	content: '';
-	//	position: fixed;
-	//	top: 0;
-	//	bottom: 0;
-	//	left: 0;
-	//	right: 0;
-	//	background: rgba(0, 0, 0, 0.6);
-	//}
-}
-.hidden {
-	//display: none !important;
+
+.container {
+  width: 100%;
+  max-width: 1280px;
+  margin: auto;
+  padding-left: 24px;
+  padding-right: 24px;
 }
 
 .flex-auto {
@@ -140,47 +134,6 @@ h1, h2, h3, h4 {
   width: 25%;
 }
 
-.caret {
-  font-size: 1.5rem;
-  vertical-align: -0.25em;
-  pointer-events: none;
-  position: absolute;
-  right: 16px;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.container {
-	width: 100%;
-	max-width: 1280px;
-	margin: auto;
-    padding-left: 24px;
-    padding-right: 24px;
-}
-
-/////
-
-.main-section {
-  width: 70%;
-  margin-right: 24px;
-  background-color: white;
-}
-
-.row-form {
-  margin-right: -10px;
-  margin-left: -10px;
-}
-
-.aside {
-  width: 30%;
-  flex-shrink: 0;
-  background-color: white;
-}
-
-.text-center {
-  text-align: center;
-}
-
 .flex {
   display: flex;
 }
@@ -209,8 +162,37 @@ h1, h2, h3, h4 {
   align-items: center;
 }
 
-.shadow {
-  box-shadow: 0 1px 2px 1px rgba(0,0,0,.15);
+.text-center {
+  text-align: center;
+}
+
+/////
+
+.main-section {
+  width: 70%;
+  margin-right: 24px;
+  background-color: white;
+}
+
+.aside {
+  width: 30%;
+  flex-shrink: 0;
+  background-color: white;
+}
+
+.row-form {
+  margin-right: -10px;
+  margin-left: -10px;
+}
+
+.caret {
+  font-size: 1.5rem;
+  vertical-align: -0.25em;
+  pointer-events: none;
+  position: absolute;
+  right: 16px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .card-header {
@@ -268,6 +250,7 @@ h1, h2, h3, h4 {
 @media only screen and (max-width: 768px) {
   .main {
     padding-top: 0;
+    padding-bottom: 250px;
   }
   .main-content {
     padding: 0;
@@ -320,6 +303,7 @@ h1, h2, h3, h4 {
       }
     }
     .aside.show {
+      position: absolute;
       .checkout-block .inner-wrapper .price-item {
         display: flex;
       }
