--- a/app/scss/_inputs.scss
+++ b/app/scss/_inputs.scss
@@ -34,14 +34,23 @@
     font-size: 12px;
     color: $red;
     &:after{
-      content: "\f06a";
-      font-family: "Font Awesome 5 Pro";
-      margin-left: 5px;
+      position: absolute;
+      content: "";
+      right: 0;
+      top: 50%;
+      margin-top: -6px;
+      width: 12px;
+      height: 12px;
+      display: inline-block;
+      background: url("../img/exclamation-circle-solid.svg") 50% 50% no-repeat;
+      background-size: cover;
     }
   }
 }
 .form-input.input-number {
   .icon-card {
+    color: $gray;
+    width: 18px;
     margin-left: 16px;
   }
 }
