separate block item-details

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -209,7 +209,7 @@ h1, h2, h3, h4 {
 }
 
 .product-list {
-  border-top: solid 1px $light-gray;
+  //border-top: solid 1px $light-gray;
   padding-top: 30px;
   li {
     margin-bottom: 16px;
