--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -53,7 +53,7 @@ body {
 
 .main {
   flex: 1 0 auto;
-  padding-top: 90px;
+  padding-top: 50px;
   position: relative;
 }
 
@@ -223,6 +223,15 @@ h1, h2, h3, h4 {
         height: auto;
       }
     }
+  }
+}
+
+
+
+@media only screen and (min-width: 993px) {
+  .sticky-p {
+    position: sticky;
+    top: 50px;
   }
 }
 
