--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -226,12 +226,29 @@ h1, h2, h3, h4 {
   }
 }
 
+.payment-block {
+  .money-icon {
+    margin-right: 10px;
+    width: 48px;
+    height: 48px;
+    background-color: $bg;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    img {
+      width: 65%;
+      height: auto;
+    }
+  }
+}
+
 
 
 @media only screen and (min-width: 993px) {
   .sticky-p {
     position: sticky;
-    top: 50px;
+    top: 100px;
   }
 }
 
